--- a/Análisis.qmd
+++ b/Análisis.qmd
@@ -198,3 +198,108 @@ gt <- ggplot(trayecto_mafe, aes(grupo_tiempo, AccT)) +
 
 ((gx | gy) /( gz | gt)) 
 ```
+```{r}
+n_camilo <- nrow(comparacion_camilo)
+n_jaider <- nrow(comparacion_jaider)
+```
+
+# Patrones observados en datos tomados al mismo tiempo
+
+En el trayecto se registro datos desde la sede volador hasta la sede minas, 
+tomando el medio de transporte intercampus de la universidad, y el tiempo
+para asistir a clase de 10:00 AM en minas (caminando, y tomando el ascensor), 
+con dos celulares distintos.
+
+Vamos a ver el total de observaciones luego de la agrupación por tiempo de los
+datos.
+
+Para el teléfono 1 se tienen:
+
+```{r}
+n_jaider
+```
+
+Para el teléfono 2 se tienen:
+
+```{r}
+n_camilo
+```
+ Lo primero que podemos ver es que el télefono 1 tomó más datos en la misma 
+ cantidad de tiempo comparado con el télefono 2.
+ 
+ Ahora vamos a comparar las dos gráficas:
+ 
+```{r}
+gx1 <- ggplot(comparacion_jaider, aes(grupo_tiempo, AccX)) +
+  geom_point(alpha = 0.3, size = 0.5)+coord_cartesian(ylim = c(-10, 20))
+```
+ 
+```{r}
+gx2 <- ggplot(comparacion_camilo, aes(grupo_tiempo, AccX)) +   geom_point(alpha = 0.3, size = 0.5)+coord_cartesian(ylim = c(-10, 20))
+```
+
+ 
+```{r}
+(gx1 | gx2)
+```
+ Como se puede ver, los valores no son muy idénticos, pero se pueden ver
+ algunos intervalos de segmentación y van a ser tres:
+ 
+ - Desde el inicio hasta las 10:00 am
+ - Desde las 10:00 am hasta las 10:15.
+ - Desde las 10:15 am hasta el final.
+ 
+```{r}
+comparacion_camilo_mod <- comparacion_camilo %>%
+  mutate(hora = hour(grupo_tiempo) + minute(grupo_tiempo) / 60)
+
+comparacion_jaider_mod <- comparacion_jaider %>%
+  mutate(hora = hour(grupo_tiempo) + minute(grupo_tiempo) / 60)
+```
+ 
+```{r}
+# Segmentos para CAMILO
+camilo_antes_10 <- comparacion_camilo_mod %>% filter(hora < 10)
+camilo_10_a_1015 <- comparacion_camilo_mod %>% filter(hora >= 10 & hora < 10.25)
+camilo_despues_1015 <- comparacion_camilo_mod %>% filter(hora >= 10.25)
+
+# Segmentos para JAIDER
+jaider_antes_10 <- comparacion_jaider_mod %>% filter(hora < 10)
+jaider_10_a_1015 <- comparacion_jaider_mod %>% filter(hora >= 10 & hora < 10.25)
+jaider_despues_1015 <- comparacion_jaider_mod %>% filter(hora >= 10.25)
+
+```
+ 
+Para el teléfono 1:
+ 
+```{r}
+# JAIDER
+summary(jaider_antes_10$AccX)
+summary(jaider_10_a_1015$AccX)
+summary(jaider_despues_1015$AccX)
+```
+
+Para el trayecto 1 la media es de 2.595 en el eje x.
+Para el trayecto 2 la media es de 0.026 en el eje x.
+Para el trayecto 3 la media es de -0.00918 en el eje x.
+
+
+Para el teléfono 2:
+
+```{r}
+# CAMILO
+summary(camilo_antes_10$AccX)
+summary(camilo_10_a_1015$AccX)
+summary(camilo_despues_1015$AccX)
+```
+
+Para el trayecto 1 la media es de 0.3018 en el eje x.
+Para el trayecto 2 la media es de 0.0323 en el eje x.
+Para el trayecto 3 la media es de -0.6257 en el eje x.
+
+
+Comparando se observa que los valores no son iguales en los dos teléfonos, pero
+si la tendencia se comporta muy similar, casualmente el primer tramo es el 
+trayecto en bus de intercampus, y es donde se obtiene el valor máximo, además
+el valor máximo más pequeño se obtiene en último trayecto que coincide
+con el momento en que los dos estudiantes estaban sentados ya en clase.
