--- a/Análisis.qmd
+++ b/Análisis.qmd
@@ -119,7 +119,7 @@ gt <- ggplot(comparacion_jaider, aes(grupo_tiempo, AccT)) +
 
 ```
 
-### Telefono 2
+## Telefono 2
 
 ```{r}
 gx <- ggplot(comparacion_camilo, aes(grupo_tiempo, AccX)) +   geom_line(alpha = 0.3, )+coord_cartesian(ylim = c(-10, 20)) 
@@ -409,7 +409,7 @@ summary(jaider_10_a_1015$AccX)
 summary(jaider_despues_1015$AccX)
 ```
 
-Para el trayecto 1 la media es de 2.595 en el eje x. Para el trayecto 2 la media es de 0.026 en el eje x. Para el trayecto 3 la media es de -0.00918 en el eje x.
+Para el trayecto 1 la media es de 2.571 en el eje x. Para el trayecto 2 la media es de 0.030 en el eje x. Para el trayecto 3 la media es de -0.003 en el eje x.
 
 Para el teléfono 2:
 
@@ -420,7 +420,7 @@ summary(camilo_10_a_1015$AccX)
 summary(camilo_despues_1015$AccX)
 ```
 
-Para el trayecto 1 la media es de 0.3018 en el eje x. Para el trayecto 2 la media es de 0.0323 en el eje x. Para el trayecto 3 la media es de -0.6257 en el eje x.
+Para el trayecto 1 la media es de -0.532 en el eje x. Para el trayecto 2 la media es de -0.5043 en el eje x. Para el trayecto 3 la media es de -0.980 en el eje x.
 
 Comparando se observa que los valores no son iguales en los dos teléfonos, pero si la tendencia se comporta muy similar, casualmente el primer tramo es el trayecto en bus de intercampus, y es donde se obtiene el valor máximo, además el valor máximo más pequeño se obtiene en último trayecto que coincide con el momento en que los dos estudiantes estaban sentados ya en clase.
 
